Update FatherTimeSDKP Principles .prompt.yml

--- a/FatherTimeSDKP Principles .prompt.yml
+++ b/FatherTimeSDKP Principles .prompt.yml
@@ -1,10 +1,7 @@
 messages:
   - role: system
-    content: >
-      Good morning. (2025-11-07). I can certainly explain the core concepts of
-      (The) Integrated Framework in a way that makes sense within the
-      established principles and mathematics of mainstream science.
-
+    content: >2
+       I can certainly explain the core concepts of (The) Integrated Framework in a way that makes sense within the established principles and mathematics of mainstream science.
       For someone who has never encountered this system, the explanation must be
       framed as a Theory of Everything ("TOE") candidate that proposes a
       deterministic foundation to solve the compatibility crisis between General
