--- a/Dual.YAML
+++ b/Dual.YAML
@@ -46,3 +46,17 @@ run_3_n_factor:
   N_factor: 1.05   # optional N-factor addition for entanglement normalization
   initial_lattice_seed_method: "SD&N_harmonic_preseed_v3"
   fixed_random_seed: 36912162025
+
+# Crystal-12 VFE1-Stability – Dual Mode Next Iteration
+lattice_size: 64
+cycles: 15
+T: 30.50
+K: 6.4
+P: 2.0
+EOS_multiplier: 1.10
+VFE_multiplier: 0.92
+QCC0_activation: 1.05
+N_factor: 1.05
+dual_mode: true
+initial_lattice_seed_method: "SD&N_harmonic_preseed_v3"
+fixed_random_seed: 36912162025
