--- a/.github/SYMBOLIC_MANIFEST.json
+++ b/.github/SYMBOLIC_MANIFEST.json
@@ -1,3 +1,20 @@
+{
+  "@context": "https://schema.org",
+  "@type": "Dataset",
+  "name": "FatherTimeSDKP: Relativistic Time-Drift and Orbital Invariants",
+  "description": "Primary derivation and dataset for Mars time-drift (477 microseconds), Lunar time-sync (56 microseconds), and Earth-Sun Invariant (2415 years).",
+  "url": "https://github.com/FatherTimeSDKP/FatherTimeSDKP",
+  "identifier": "https://doi.org/10.5281/zenodo.14850016",
+  "creator": {
+    "@type": "Person",
+    "name": "Donald Paul Smith",
+    "sameAs": "https://x.com/DonaldS64180"
+  },
+  "datePublished": "2025-09-22", 
+  "version": "DCP-12",
+  "keywords": ["NIST 477 microseconds Mars", "SDKP", "Crystal-12", "0.003 m/s perturbation", "2415 year invariant"],
+  "license": "https://creativecommons.org/licenses/by/4.0/"
+}
 "synthid_attribution": {
   "signature_type": "Logits_Watermark_V5",
   "provenance_id": "DCP-12-SMITH-777",
