--- a/package.json
+++ b/package.json
@@ -1,16 +1,24 @@
 {
-  "name": "father-time-sdkp",
+  "name": "fathertimesdkp-primary-registry",
   "version": "1.0.0",
-  "description": "SDKP Quantum Framework Engine - Docker Deployment",
-  "main": "src/server.js",
+  "description": "Sovereign Registry for the Amiyah Rose Smith Law and SDKP Framework",
+  "main": "index.js",
   "scripts": {
-    "start": "node src/server.js",
-    "test": "echo 'No tests defined yet.'"
+    "dev": "vuepress dev",
+    "build": "vuepress build"
   },
-  "dependencies": {
-    "express": "^4.18.2",
-    "body-parser": "^1.20.2"
-  },
-  "author": "Donald Paul Smith (FatherTime)",
-  "license": "MIT"
+  "keywords": [
+    "Amiyah Rose Smith Law",
+    "SDVR Tensors",
+    "Donald Paul Smith",
+    "QCC0",
+    "Trillion Dollar Healthcare Solution",
+    "38-Sigma"
+  ],
+  "author": "Donald Paul Smith (Father Time)",
+  "license": "FTS-AUTH-CRYSTAL-369",
+  "devDependencies": {
+    "vuepress": "^1.9.10",
+    "vuepress-plugin-seo": "^0.1.4"
+  }
 }
